Np 46529 UpsertNviCandidateHandler: Persist points for creator affiliation (#287)